fixing new ./scripts directory path in Run fine-tuning on Modal step

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -60,7 +60,7 @@ jobs:
         id: train
         run: |
           echo "Starting Modal training..."
-          modal run finetune.py \
+          modal run ./scripts/finetune.py \
             --epochs ${{ github.event.inputs.epochs || '2' }} \
             --batch-size ${{ github.event.inputs.batch_size || '8' }}
 
