--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -128,6 +128,7 @@ jobs:
   train:
     name: Preprocess & Fine-tune on Modal
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, 'Merge pull request') }}
 
     permissions:
       contents: write
